# vidconverter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  com.videoparaestados.app.desktop  install.sh  pyproject.toml  requirements.txt  videoparaestados.py
.github/workflows/: python-app.yml
